# digital-image-processing-course

./: .gitignore  .project  README.md
DIP07_QuadTrees/: .project  DIP_06_Segmentation.launch  DIP_07_QuadTree.launch
DIP07_QuadTrees/src/main/cpp/: CMakeLists.txt  DisplayImage.cpp
DIP_01/: .cproject  .project
DIP_02_Transpose/: .project
DIP_02_Transpose/src/main/cpp/: DisplayImage.cpp
DIP_03_Histograms/: .project  CMakeLists.txt  DIP_03_Histograms Debug.launch
DIP_03_Histograms/src/main/cpp/: DisplayImage.cpp
DIP_04_Filtering/: .project  DIP_04_Filtering.launch
DIP_04_Filtering/src/main/cpp/: DisplayImage.cpp
DIP_06_Segmentation/: .project  DIP_06_Segmentation.launch
DIP_06_Segmentation/src/main/cpp/: DisplayImage.cpp
TESSERACT_02_MoreStructuredExample/: CMakeLists.txt  README.md
TESSERACT_02_MoreStructuredExample/src/main/cpp/: CMakeLists.txt
TESSERACT_HelloTesseract/: README.md  helloWorld.cpp  tesseract.bash
